@@ -2,6 +2,7 @@
 
 = 2.9.0 =
 * WordPress 5.3 compatible.
+* Added member counts displayed for each group under Groups > Groups.
 * Fixed issues with and added missing internal code documentation mainly related to undocumented types.
 
 = 2.8.0 =
